--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,10 +34,12 @@
     <h2 class="post-subtitle">{{ page.subtitle }}</h2>
     {% endif %}
 
-    <article class="markdown-body">
-      {{ page.content }}
-    </article>
-
+    <div style={overflow:hidden}>
+      <article class="markdown-body">
+        {{ page.content }}
+      </article>
+    </div>
+    
     {% if site.social-share %}
     <div class="social-share-wrapper">
       <div class="social-share"></div>
