--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,7 +34,7 @@
     <h2 class="post-subtitle">{{ page.subtitle }}</h2>
     {% endif %}
 
-    <div style={overflow:hidden}>
+    <div style="overflow:hidden">
       <article class="markdown-body">
         {{ page.content }}
       </article>
